# bible-verse-index-cards

./: .gitignore  README.md  config.txt  config_niv.txt  config_niv2.txt  config_rnksv.txt  configure.ac
src/: Makefile.am  config.proto  main.cpp
